<resources>
    <string name="app_name">Wikicleta</string>
	<string name="nothing"></string>
	<string name="dashes">--</string>
	<string name="discard">Discard</string>
	<string name="retry">Retry</string>
	<string name="save_as_draft">Save as draft</string>
	<string name="notification">Notification</string>
	<string name="question">Question</string>
	<string name="neutral">Accept</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="connectivity_problems">Please check your connection, we were unable to contact the remote server</string>
	<string name="hide">Hide</string>
	<string name="attempt_reload_text">Touch here to reload</string>
	<string name="event_today">Today</string>
	<string name="event_tomorrow">Tomorrow</string>
	<string name="event_unknown">Unknown date</string>
	<string name="event_other">In %d days</string>
	<string name="details">See details</string>
	<string name="minutes">Minutes</string>
	<string name="seconds">Seconds</string>
	<string name="see_comments">See Comments</string>
	<string name="routes_dialog_section">Route</string>
	<string name="tips_dialog_section">Tip</string>
	<string name="bicibus_dialog_section">Bicibus</string>
	<string name="bike_parking_dialog_section">Parking</string>
	<string name="bike_repair_dialog_section">Workshop/store</string>
	<string name="toggle_menu_routes">Route</string>
	<string name="toggle_menu_tips">Tip</string>
	<string name="toggle_menu_bike_parking">Parkings</string>
	<string name="toggle_menu_bike_sharing">Public Bicycles</string>
	<string name="toggle_menu_bike_workshops_and_stores">Workshops and stores</string>
	<string name="toggle_menu_cyclepaths">Cyclepaths</string>
	<string name="dialog_add">Add</string>
	<string name="dialog_share">New</string>
	<string name="dialog_toggle">Show or Hide</string>
	<string name="route_recording_section">New route</string>
	<string name="route">Route</string>
	<string name="route_details">Details</string>
	<string name="routes_title">Routes</string>
	<string name="save_route">Save route</string>
	<string name="empty_routes_title">You have not shared a route yet</string>
	<string name="routes_question_delete">Do you want to delete this route?</string>
	<string name="routes_discard_route_question">Do you want to discard this route?</string>
	<string name="routes_saving_title">Save route</string>
	<string name="routes_recording_paused">Route tracking on pause</string>
	<string name="routes_recording_resumed">Tracking route</string>
	<string name="routes_recording_service_start">Route tracker started</string>
	<string name="routes_ready_for_recording">You can start tracking your route now</string>
	<string name="routes_stats_speed">Speed</string>
	<string name="routes_stats_time">Time</string>
	<string name="routes_stats_distance">Distance</string>
	<string name="routes_saving_form_name">Name</string>
	<string name="routes_saving_form_details">Details</string>
	<string name="routes_saving_form_decline">Discard</string>
	<string name="routes_is_private_text">Is it private?</string>
	<string name="route_saved_successfully">Route saved successfully</string>
	<string name="route_not_saved">We were unable to save your route</string>
	<string name="route_updated_successfully">Route updated successfully</string>
	<string name="route_not_updated">We were unable to update the changes on your route</string>
	<string name="route_deleted_successfully">Route destroyed successfully</string>
	<string name="route_not_deleted">We were unable to delete this route</string>
	<string name="route_sent_to_drafts">Route saved as draft</string>
	<string name="route_security_value">Safety</string>
	<string name="route_fast_value">Speed</string>
	<string name="route_comfort_value">Comfort</string>
	<string name="route_ranking_instructions_text">Touch a category and change it\'s value, according to your perception of the route</string>
	<string name="route_ranking_shared_successfully">You have ranked a route successfully! ¡Thanks!</string>
	<string name="route_ranking_failed_to_share">We could not receive your ranking, please try again later</string>
	<string name="waiting_for_performances">Loading performances table</string>
	<string name="all_performants">Performance table</string>
	<string name="challenge_or_check_in_text">Compete / Check-in on route</string>
	<string name="route_performances_table_username_title_text">User</string>
	<string name="route_performances_table_date_title_text">Date</string>
	<string name="route_performances_table_time_title_text">Time</string>
	<string name="route_performances_table_velocity_title_text">Speed</string>
	<string name="tip">Tip</string>
	<string name="tips_new_title">New Tip</string>
	<string name="tips_edit_title">Edit Tip</string>
	<string name="tips_save_title">Save Tip</string>
	<string name="tips_changes_uploaded_successfully">Changes to tip saved successfully</string>
	<string name="tips_changes_not_commited">Changes to tip could not be saved. What shall we do?</string>
	<string name="tips_uploaded_successfully">Thanks for sharing your tip!</string>
	<string name="tips_deleted_successfully">Tip deleted successfully</string>
	<string name="tips_did_not_deleted">It was impossible to destroy this tip, try again please</string>
	<string name="tips_sent_to_drafts">Tip saved as draft</string>
	<string name="tips_not_commited">It was impossible to save this tip. What shall we do?</string>
	<string name="tips_form_content_hint">Tip contents</string>
	<string name="tips_category_select_instruction">What kind of tip will you share?</string>
	<string name="tips_input_length_min_error">The content should be at least of 30 characters</string>
	<string name="tips_input_length_max_error">The content should be no more than 250 characters</string>
	<string name="tips_input_empty">The content should not be empty</string>
	<string name="tips_uploading">Uploading tip &#8230;</string>
	<string name="tips_question_delete">Destroy this tip?</string>
	<string name="tips.categories.danger">Danger</string>
	<string name="tips.categories.alert">Information</string>
	<string name="tips.categories.sightseeing">Sightseeing</string>
	<string name="parking">Bike parking</string>
	<string name="parkings_new_title">New bike parking</string>
	<string name="parkings_edit_title">Edit bike parking</string>
	<string name="parkings_save_title">Save bike parking</string>
	<string name="parkings_uploaded_successfully">Thanks for sharing a new bike parking!</string>
	<string name="parkings_changes_uploaded_successfully">Changes to bike parking saved successfully</string>
	<string name="parkings_not_commited">It was impossible to save this bike parking. What shall we do?</string>
	<string name="parkings_changes_not_commited">Changes to bike parking could not be saved. What shall we do?</string>
	<string name="parkings_deleted_successfully">Bike parking deleted successfully</string>
	<string name="parkings_did_not_deleted">It was impossible to destroy this bike parking, try again please</string>
	<string name="parkings_sent_to_drafts">Bike parking sent to drafts</string>
	<string name="parkings_input_length_min_error">The details should be at least of 30 characters</string>
	<string name="parkings_input_length_max_error">The details should be no more than 250 characters</string>
	<string name="parkings_input_empty">Please, leave some details about this parking</string>
	<string name="parkings_kind_select_instruction">What kind of bike parking will you share?</string>
	<string name="parkings_form_details_hint">Bike parking details</string>
	<string name="parkings_form_hasRoof">Has roof</string>
	<string name="parkings.kinds.government_provided">Official</string>
	<string name="parkings.kinds.urban_mobiliary">Furniture</string>
	<string name="parkings.kinds.venue_provided">From a venue</string>
	<string name="workshop">Workshop</string>
	<string name="workshop_store">Workshop and store</string>
	<string name="workshops_new_title">New workshop/store</string>
	<string name="workshops_edit_title">Edit workshop/store</string>
	<string name="workshops_save_title">Save workshop/store</string>
	<string name="workshops_uploaded_successfully">Thanks for sharing a new workshop/store!</string>
	<string name="workshops_changes_uploaded_successfully">Changes to workshop/store saved successfully</string>
	<string name="workshops_not_commited">It was impossible to save this workshop/store. What shall we do?</string>
	<string name="workshops_changes_not_commited">Changes to workshop/store could not be saved. What shall we do?</string>
	<string name="workshops_deleted_successfully">Workshop/store deleted successfully</string>
	<string name="workshops_did_not_deleted">It was impossible to destroy this workshop/store, try again please</string>
	<string name="workshops_sent_to_drafts">Workshop/store sent to drafts</string>
	<string name="workshops_form_name_hint">Write name</string>
	<string name="workshops_form_details_hint">Give some details</string>
	<string name="workshops_form_isStore">Is also a store</string>
	<string name="workshops_form_phone_hint">Phone number</string>
	<string name="workshops_form_cellPhone_hint">Cell-Phone number</string>
	<string name="workshops_form_webpage_hint">Webpage</string>
	<string name="workshops_form_twitter_hint">Twitter</string>
	<string name="workshops_form_horary_hint">Schedule</string>
	<string name="workshops_form_extra_hint">Tap here to include detailed information about this workshop/store</string>
	<string name="workshops_bad_input_twitter_format">Should not have the "@"</string>
	<string name="workshops_input_length_min_error">The details should be at least of 30 characters</string>
	<string name="workshops_input_length_max_error">The details should be no more than 250 characters</string>
	<string name="workshops_input_empty">Leave a detail about this workshop/store</string>
	<string name="workshops_input_empty_name">A name for this workshop/store is needed</string>
	<string name="workshops_input_length_min_error_name">The name is to short</string>
	<string name="workshops_input_length_max_error_name">The name should not be longer than 30 characters</string>
	<string name="cycling_groups_meeting_time">Meeting time</string>
	<string name="cycling_groups_departing_time">Leaving at</string>
	<string name="cycling_groups_hour">%s hrs</string>
	<string name="cycling_group_unknown_remaining_days_for_ride">---</string>
	<string name="listing_events">Nearby events</string>
	<string name="event_ride">Ride</string>
	<string name="event_trip">Trip</string>
	<string name="no_events_nearby">No events in this area</string>
	<string name="trip_details">Trip details</string>
	<string name="trips_bar_route_start_text_value">Start</string>
	<string name="trips_bar_route_end_text_value">End</string>
	<string name="trip_pois.categories.service_station">Service station</string>
	<string name="trip_pois.categories.ambulance">Ambulance</string>
	<string name="trip_pois.categories.paramedic"></string>
	<string name="trip_pois.categories.bike_lending">Bike Lending</string>
	<string name="trip_pois.categories.direction_mark">Direction</string>
	<string name="trip_pois.categories.km_mark">Kilometer</string>
	<string name="trip_pois.categories.transport_connection">Public transportation</string>
	<string name="trip_pois.categories.sightseeing">Sightseeing</string>
	<string name="form_anyoneCanEdit">Anyone can edit?</string>
	<string name="attribution_icons_text">We used icons from</string>
	<string name="comes_from_text">www.thenounproject.com</string>
    <string name="prompt_pic_instructions">Put a picture from yourself</string>
	<string name="prompt_email">Mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password confirmation</string>
    <string name="prompt_name">Your name</string>
    <string name="prompt_username">Username</string>
	<string name="none"></string>
</resources>