<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView 
		android:layout_width="match_parent"
    	android:layout_height="match_parent">
		<LinearLayout 
		    android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:orientation="vertical"
    		android:gravity="center">
		            <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/none"
         android:src="@drawable/full_ballon_icon"
         android:layout_marginTop="20dp"
		 android:gravity="center"
         android:layout_marginBottom="10dp" />
    <TextView
        android:id="@+id/attribution_icons_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/attribution_icons_text"
        android:textColor="@color/wikicleta_blue"
        android:textSize="23sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/comes_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/comes_from_text"
        android:textColor="@color/wikicleta_orange"
        android:textSize="15sp"
        android:textStyle="bold" />
		</LinearLayout>
    </ScrollView>
    
</LinearLayout>
