<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient_blue" >
    
	<ScrollView
        android:id="@+id/registration_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/actions_container" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:padding="30dp" >
	        
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:orientation="vertical">
	            <ImageView android:id="@+id/user_pic" 
		            android:layout_width="@dimen/profile_avatar_width"
		        	android:layout_height="@dimen/profile_avatar_width"
		        	android:layout_gravity="center"
		        	android:src="@drawable/profile_placeholder_avatar" />
		
		            <TextView
		                android:id="@+id/pic_instructions"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="15dp"
		                android:layout_gravity="center"
		                android:text="@string/prompt_pic_instructions"
		                android:textColor="@color/wikicleta_orange"
		                android:textSize="13sp" />
	        </LinearLayout>

            
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:maxLines="1"
                android:singleLine="true" >
            </EditText>
            
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" >
            </EditText>
            
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true" >
            </EditText>
                
			<EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true">
            </EditText>
			
            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_password_confirmation"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true">
            </EditText>
       	</LinearLayout>
       	
    </ScrollView>
    <RelativeLayout
        android:id="@+id/actions_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@color/wikicleta_white"
        android:layout_alignParentBottom="true" >
		<RelativeLayout 
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_toRightOf="@+id/return_button">
	        <ImageView
	            android:id="@+id/save_profile"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/background_selector"
	            android:contentDescription="@string/nothing"
	            android:src="@drawable/save_icon_orange"
	            android:clickable="true"
	            android:layout_alignParentRight="true" />
	        
	    </RelativeLayout>
        <ImageView
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/nothing"
            android:background="@drawable/background_selector"
            android:src="@drawable/return_icon" />
    </RelativeLayout>
</RelativeLayout>