<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_events_list_container"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/wikicleta_white">
	<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/toolbar_inv">
		    
		    <ImageView android:id="@+id/dialog_close"
		        android:contentDescription="@string/none"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/dialog_close_icon"/>
		    
		    <TextView
	           android:id="@+id/dialog_menu_title"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:gravity="right"
	           android:layout_gravity="center_vertical"
	           android:text="@string/listing_events"
	           android:textColor="@color/wikicleta_orange"
	           android:textSize="18sp"
	           android:padding="10dp"
	           android:layout_marginRight="20dp"
	           android:textStyle="bold" />
	</LinearLayout>
	<LinearLayout android:id="@+id/empty_message_container"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp">
	    <TextView android:id="@+id/empty_message_text"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_margin="10dp"
	        android:textSize="15dp"
	        android:gravity="center"
	        android:textColor="@color/wikicleta_blue"
	        android:text="@string/no_events_nearby" />
	</LinearLayout>
	    
</LinearLayout>